Layour e rotas prontos

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,8 @@
 	</small>
 	<nav>
 		<ul>
-			<li><%=link_to "About", '/static_pages/about"' %></li>
-			<li><%=link_to " Contatc", '#' %></li>
+			<li><%=link_to "Sobre", about_path %></li>
+			<li><%=link_to "Contato", contact_path %></li>
 			<li><a href="http://newe.railstutorial.org/">News</a></li>
 		</ul>
 	</nav>
