--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
 			<%= link_to "Me Ajudade Nisso", '#', id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
-					<li><a href="/static_pages/home">home</a></li>
-					<li><a href="/static_pages/help">Help</a></li>
-					<li><a href="/static_pages/about">About</a></li>
+					<li><%= link_to "Principal", root_path %></li>
+					<li><%= link_to "Ajuda", help_path %></li>
+					<li><%= link_to "Entrar", '#' %></li>
 				</ul>
 			</nav>
 		</div>
