--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,6 @@
 		Dúvidas?
 		<a href="http://stackoverflow.com">Me Ajuda Nisso</a>
 	</h2>
-	<%= link_to "Cadastra se", '#', class: "btn btn-large btn-primary" %>
+	<%= link_to "Cadastra se", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 <%= link_to image_tag("ajuda.png", alt: "Ajuda"), 'http://rubyonrails.org/' %>
